# CLI-pi

./: .gitignore  CMakeLists.txt  README.md  build.sh  tpi
.github/workflows/: cmake-single-platform.yml
src/: config.h  main.c
